--- a/views/template/simple_struct.jade
+++ b/views/template/simple_struct.jade
@@ -4,7 +4,9 @@ html
     title #{title}
 
 
+
     link(rel='stylesheet', href='/stylesheets/simple.css') 
+    meta(name="viewport" content="width=device-width, initial-scale=1")
 
     block head-end
   body.document
