--- a/views/index.jade
+++ b/views/index.jade
@@ -33,6 +33,57 @@ block content
           |, 
           strong カタカナ
 
+  div.shopHeader
+    div.shopHeader__icon
+      div.shopIcon
+        img.shopIcon__image(src="/images/arton_logo.png" alt="Nice tee meet you! arton.jp")
+    div.shopHeader__desc
+      div.shopDesc
+        h1.shopDesc__title ARTON
+        div.shopDesc__desc
+          img.shopDesc__photo(src="/images/arton-inside-wide.png" alt="inside arton")
+          div.
+            You can get your original tee soon after you go to ARTON. <br>
+            ARTON is very close from Shibuya Station Hachiko side. <br>
+            We prepared original named Tee of your Japaname. Bring your Japaname Code and get your original Tee! The price is 2,800 yen!<br>
+            Of cource, you can select another tee design.<br>
+          strong "Nice Tee Meet You!"
+          br
+          a(href="http://arton.jp") Go to ARTON Website
+
+  div.shopItems
+    h2.shopItems__title Japaname Original Design
+    p.shopItems__desc
+    ul.shopItems__list
+      each artwork in artworks
+        li.shopItems__item
+          div.teeComposite
+            img.teeComposite__tee(src="/images/white-tee.jpg" alt="tee thumbnail")
+            img.teeComposite__image(src="/artworks/#{artwork.artwork_name}/#{japaname && japaname.code || 37}/thumbnail" alt="japaname tee thumbnail")
+
+
+  div.goToArton
+    h2.goToArton__title The way to ARTON.
+    ul.goToArton__list
+      each index in [1,2,3,4,5,6]
+        li.goToArton__item
+          img.goToArton__photo(src="/images/way-to-arton-#{index}.jpg" alt="way to arton #{index}")
+
+      li.goToArton__item.insideShop
+        img.goToArton__photo(src="/images/arton-inside.jpg" alt="arton-inside")
+
+      li.goToArton__item.insideShop
+        img.goToArton__photo(src="/images/arton-making.jpg" alt="arton-inside")
+
+  h2 Google Map
+  div
+    a.button(href="https://goo.gl/maps/YaFKbuASFsN2") Navigate to ARTON by GoogleMap.
+  div.widgetHelper__accessMap
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.6611458134553!2d139.6982283818941!3d35.66071938770297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca845f30001%3A0x86c4ae6e4b746366!2sARTON!5e0!3m2!1sja!2sjp!4v1468119874678" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
+
+
 
 block footer
   div(style="height:200px;")
