--- a/views/index.jade
+++ b/views/index.jade
@@ -34,7 +34,7 @@ block content
           strong カタカナ
 
   
-  div 
+  div(style="text-align:center;")
     h2 Japaname Ninja Masa in Shibuya & Asakusa
     <iframe width="560" height="315" src="https://www.youtube.com/embed/YvLrDmVK9Og" frameborder="0" allowfullscreen></iframe>
 
