small change in server

--- a/views/api/index.jade
+++ b/views/api/index.jade
@@ -3,6 +3,8 @@ extends simple_struct
 block head_content
   link(rel='stylesheet', href='/stylesheets/crafti.css') 
   link(rel='stylesheet', href='/javascripts/ps/css/perfect-scrollbar.min.css') 
+  meta(name="viewport" content="width=device-width, initial-scale=1")
+  
 
 block body_content
   form(id="selected-form" method="POST" action="/names")
