--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,6 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='http://japaname.jp/api/crafti/japaname_frame.js')
   body
     block content
