--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='http://japaname.jp/api/crafti/japaname_frame.js')
+    link(rel='stylesheet' href='http://japaname.jp/api/crafti/japaname_frame.js')
+
   body
     block content
