--- a/views/api/index.jade
+++ b/views/api/index.jade
@@ -6,28 +6,5 @@ block head_content
   meta(name="viewport" content="width=device-width, initial-scale=1")
   
 block body_content
-  form(id="selected-form" method="POST" action="/names")
-    input(type="hidden" name="original_name" value="#{original_name}")
-    input#selected_ateji(type="hidden" name="ateji"  value="")
-
-  div#kanji-selected-wrapper
-    table(riot-tag="ateji-box")
-
-  div#ateji-cands-container
-    include crafti_candidates_table.jade
-
-    each name_obj in name_objs
-      +ateji_cands(name_obj)
-
-  script(src="/javascripts/jquery.min.js" type="text/javascript")
-  script(src="/javascripts/ps/js/perfect-scrollbar.jquery.min.js" type="text/javascript")
-
-  script(src="/javascripts/riot.min.js" type="text/javascript")
-  script(src="/riotjs/ateji-box.js" type="text/javascript")
-
-  script.
-    var atejiBoxTag = riot.mount("ateji-box")[0];
-
-
-  script(src="/javascripts/craftiscript.js")
+  p index
 
