created api to make japaname

--- a/views/api/crafti.jade
+++ b/views/api/crafti.jade
@@ -23,7 +23,9 @@ block body_content
 
   script.
     var atejiBoxTag = riot.mount("ateji-box")[0];
+    var original_name = "#{original_name}";
 
+  
 
   script(src="/javascripts/craftiscript.js")
 
