--- a/views/admin/users.jade
+++ b/views/admin/users.jade
@@ -16,21 +16,18 @@ block sub-content
   table.table
     thead
       tr
-        th 認証方法
         th メールアドレス
         th 名前
         th 権限
         th 登録当て字
-        th Webpay登録有無
         th link
     tbody
       each user in users
         tr(id="#{user._id}")
-          td= user.userinfo.method
-          td= user.userinfo.email
-          td= user.name
+          td= user.username
+          td= user.username
           td= user.authorities.join(', ')
-          td= user.ateji_id && user.ateji_id .ateji_name || "none"
-          td= !!user.webpay_cus_code
+          td= user.my_japaname && user.my_japaname.string || "none"
           td
             a.button(href="/admin/users/#{user._id}") ユーザーページへ
+            a.button(href="/admin/users/#{user._id}/delete") 削除
