--- a/views/template/struct.jade
+++ b/views/template/struct.jade
@@ -28,6 +28,7 @@ html
     meta(property="og:email" content="")
 
     link(rel='stylesheet', href='/stylesheets/main.css') 
+    link(rel="alternate" href="https://#{host}/" hreflang="en")
 
     link(rel="shortcut icon" href="/favicon.ico")
     meta(name="viewport" content="width=device-width, initial-scale=1")
