--- a/views/template/structnew.jade
+++ b/views/template/structnew.jade
@@ -25,8 +25,8 @@ html
     meta(property="og:image" content="#{ og_image || 'http://www.ateji.jp/images/logo_fude.png'}")
     meta(property="og:site_name" content="#{title}")
     meta(property="og:email" content="")
+    link(rel="alternate" href="https://#{host}/" hreflang="en")
 
-    link(rel='stylesheet', href='/stylesheets/normalize.css') 
     link(rel='stylesheet', href='/stylesheets/main.css') 
 
     link(rel="shortcut icon" href="/favicon.ico")
