--- a/scss/main.scss
+++ b/scss/main.scss
@@ -33,6 +33,7 @@
 @import "shopItems";
 @import "goToArton";
 @import "japanameTable";
+@import "charsTable";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
