--- a/views/index.jade
+++ b/views/index.jade
@@ -32,6 +32,14 @@ block content
           strong ひらがな
           |, 
           strong カタカナ
+          |, 
+          strong roma-ji 
+            small (Japanese way to express pronounciation)
+  
+  ul
+    li 
+      a(href="/names/") Name list
+
 
   
   //
