--- a/views/template/structnew.jade
+++ b/views/template/structnew.jade
@@ -5,13 +5,13 @@ html
     meta(charset="utf-8")
     block variables
 
-    - title = title || "Japaname - Get Your Japaname"
+    - title_tag = (title && title + " | " || "") + "Japaname - Get Your Japaname"
     - description = description || 'Japaname.jp gives you Japanese name not only in Hiragana or Katakana but also in Kanji. We call it "japaname". You can select your kanjis very easily. Get your COOL KANJI NAME! You can also learn deeply about Japanese charactors and its historical background.'
     - keywords = "japaname, ateji, kanji, japanese character, japanese calligraphy,  japanese goods, name, in japanese"
     - hashtag = "Japaname"
     - body_class = body_class || "topbar-margin"
 
-    title=title
+    title= title_tag
 
     meta(name="description" content="#{description}")
     meta(name="keywords" content="#{keywords}")
@@ -19,11 +19,11 @@ html
     meta(property="fb:app_id" content="1724484991112261")
 
     meta(property="og:type" content="#{originalPath == '/' ? 'website' : 'article'}")
-    meta(property="og:title" content="#{title}")
+    meta(property="og:title" content="#{title_tag}")
     meta(property="og:description" content="#{description}")
     meta(property="og:url" content="#{originalUrl}") 
     meta(property="og:image" content="#{ og_image || 'http://www.ateji.jp/images/logo_fude.png'}")
-    meta(property="og:site_name" content="#{title}")
+    meta(property="og:site_name" content="#{title_tag}")
     meta(property="og:email" content="")
     link(rel="alternate" href="https://#{host}/" hreflang="en")
 
