changed tweet contents

--- a/views/include/footer.jade
+++ b/views/include/footer.jade
@@ -17,7 +17,7 @@ footer#page-footer
       include /include/sharebox.jade
       +sharebox(
         tweet || "", 
-        share_url || "",
+        share_url || url,
         hashtag || "")
 
   div#copyright
