--- a/views/template/structnew.jade
+++ b/views/template/structnew.jade
@@ -9,6 +9,7 @@ html
     - description = description || 'Japaname.jp gives you Japanese name not only in Hiragana or Katakana but also in Kanji. We call it "japaname". You can select your kanjis very easily. Get your COOL KANJI NAME! You can also learn deeply about Japanese charactors and its historical background.'
     - keywords = "japaname, ateji, kanji, japanese character, japanese calligraphy,  japanese goods, name, in japanese"
     - hashtag = "Japaname"
+    - tweet = "Get your japanese name on Japaname! Kanji name not only in hiragana or katakana."
     - body_class = body_class || "topbar-margin"
 
     title= title_tag
