--- a/scss/_jnSearchBox.scss
+++ b/scss/_jnSearchBox.scss
@@ -1,48 +1,13 @@
-
 $jsb: "jnSearchBox";
-
-$jsb-font-size:3rem;
-$jsb-padding-size:$jsb-font-size*0.3;
-$jsb-height: $jsb-font-size + $jsb-padding-size*2;
 
 
 .#{$jsb}{
   @include clearfix();
-
-  //margin:0 auto;
-  padding:0;
-
-
-  border-bottom:2px solid ;
-
-  font-size:$jsb-font-size;
-  background:white;
-
-  position:relative;
-  overflow:hidden;
-}
-
-input[type="search"].#{$jsb}__textbox{
   display:block;
+  position:relative;
 
-  //erace
-  border:0;
-  box-shadow:none;
-  border-radius:0;
-
-  width:auto;
-
-  //reset
-
-  padding:$jsb-padding-size;
-  margin:0;
-  height:$jsb-height;
-
-  line-height:1;
-
-  font-size:$jsb-font-size;
-
-
+  //font-size:2.4rem; //そとから指定してもらう
+  //height:100%;
 }
 
 
@@ -51,15 +16,55 @@ input[type="search"].#{$jsb}__textbox{
   position:absolute;
     right:0;
     top:0;
-  box-sizing:border-box;
-  border-radius:0;
+    bottom:0;
+  padding:0 0.5em;
+  font-size:inherit;
 
-  height:$jsb-height;
-  padding:$jsb-padding-size;
-
-  width:auto;
-
-  line-height:1;
+  height:100%;
 }
+
+input[type="search"].#{$jsb}__textbox{
+  display:block;
+  width:100%;
+  margin:0;
+  padding:0 0.5em;
+  font-size:inherit;
+
+  height:100%;
+}
+
+/*
+
+.#{$jsb}{
+  @include clearfix();
+
+  display:block;
+  position:relative;
+
+  font-size:2.4rem;
+}
+
+
+.#{$jsb}__button{
+  display:block;
+  position:absolute;
+    right:0;
+    top:0;
+    bottom:0;
+
+  font-size:inherit;
+}
+
+input[type="search"].#{$jsb}__textbox{
+  display:block;
+
+  width:100%;
+  margin:0;
+
+  font-size:inherit;
+}
+*/
+
+
 
 
