--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,7 @@ block variables
 - body_id = "page_index";
 
 block topbar
-  include /template/topbar
-  +topbar(false,false)
+  topbar(drawLogo="false" drawSearchbox="false" )
 
 block content
 
@@ -15,7 +14,6 @@ block content
   h1(style="text-align:center;") Get Your <br>
     img(src="/images/japaname_logo_800.png" alt="japaname" style="max-width:90%;")
 
-  include /include/ateji_search.jade
 
   
   table
@@ -23,7 +21,7 @@ block content
       td(style="width:20%;opacity:0.7")
         img(src="/images/risumaru_yubi_right.png")
       td(style="width:80%")
-        +ateji_search(null,null,null,true)
+        japaname-searchbox(focus="true")
         p.text-center(style="opacity:0.7")
           br
           |Accepts 
@@ -41,47 +39,16 @@ block content
       a(href="/names/") Name list
 
 
-  
-  //
-    div(style="text-align:center;")
-      h2 Japaname Ninja Masa in Shibuya & Asakusa
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/YvLrDmVK9Og" frameborder="0" allowfullscreen></iframe>
-
-      div(style="height:100px")
-
-
-
-    
-    div.shopHeader
-      div.shopHeader__icon
-        div.shopIcon
-          img.shopIcon__image(src="/images/arton_logo.png" alt="Nice tee meet you! arton.jp")
-      div.shopHeader__desc
-        div.shopDesc
-          h1.shopDesc__title ARTON
-          div.shopDesc__desc
-            img.shopDesc__photo(src="/images/arton-inside-wide.png" alt="inside arton")
-            div.
-              You can get your original tee soon after you go to ARTON. <br>
-              ARTON is very close from Shibuya Station Hachiko side. <br>
-              We prepared original named Tee of your Japaname. Bring your Japaname Code and get your original Tee! The price is 2,800 yen!<br>
-              Of cource, you can select another tee design.<br>
-            strong "Nice Tee Meet You!"
-            br
-            a(href="http://arton.jp") Go to ARTON Website
-
-    h2 Location of ARTON
-    div
-      a.button(href="https://goo.gl/maps/YaFKbuASFsN2") Navigate to ARTON by GoogleMap.
-    div.widgetHelper__accessMap
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.6611458134553!2d139.6982283818941!3d35.66071938770297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ca845f30001%3A0x86c4ae6e4b746366!2sARTON!5e0!3m2!1sja!2sjp!4v1468119874678" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-
-
-
 
 block footer
   div(style="height:200px;")
   include /include/footer.jade
 
 
+block append body-end-scripts
+  script(src="/javascripts/riot.min.js")
+  script(src="/riotjs/japaname-searchbox.js")
+  script(src="/riotjs/topbar.js")
+  script.
+    var searchbox = riot.mount("japaname-searchbox")[0];
+    var topbar = riot.mount("topbar", {user: !{user ? JSON.stringify(user):"null" }})[0];
